Updated customdropdown with animation

--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade " id="transfer-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade " id="materialcount-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
@@ -10,7 +10,7 @@
             <div class="custom-modal-body">
                 <div class="card shadow table-size">
                     <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Transfer Details:</h6>
+                        <h6 class="m-0 font-weight-bold table-title">Material Details:</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive scrollable-table-container">
@@ -48,7 +48,7 @@
                 <h6 class="m-0 font-weight-bold">Transfer Order</h6>
             </div>
             <div class="card-body extend">
-                <div class="row mb-2 justify-content-center">
+                <div class="row mb-2 justify-content-cente      r">
                     <div class="col-6">
                         <label class="">Product</label>
                         <select class="form-control text-center" name="productlists" id="productlists">
