--- a/views/inventorycount/inventorycount.ejs
+++ b/views/inventorycount/inventorycount.ejs
@@ -49,6 +49,11 @@
                     <h6 class="m-0 font-weight-bold">Inventory Count</h6>
                 </div>
                 <div class="card-body extend">
+                    <div class="row">
+                        <div class="col-6">
+                            
+                        </div>
+                    </div>
                     <div class="row mb-2">
                         <div class="col-md-6">
                             <div class="row">
@@ -93,13 +98,20 @@
                             </div>
                             <div class="row mb-2 mt-2">
                                 <div class="col-8">
-                                    <label class="">Product</label>
-                                    <select class="form-control text-center loading-border" name="productlists" id="productlists">
-                                        <option value="">-- Select here --</option>
-                                    </select>  
+                                    
+                                    <div class="customdropdown">
+                                        <div class="select">
+                                          <span>Select Product</span>
+                                          <i class="fa fa-chevron-left"></i>
+                                        </div>
+                                        <input type="hidden" name="gender">
+                                        <ul class="customdropdown-menu">
+                                          <li id="male">Male</li>
+                                          <li id="female">Female</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col-4">
-                                    <label for="productquantities">Quantity</label>
                                     <input id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
                                 </div>
                             </div>
