--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -87,10 +87,15 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text">Category</span>
+                                    <div class="customdropdown">
+                                        <div class="select">
+                                          <span>Select Category</span>
+                                          <i class="fa fa-chevron-left"></i>
+                                        </div>
+                                        <input type="hidden" name="category" id="category">
+                                        <ul class="customdropdown-menu">
+                                        </ul>
                                     </div>
-                                    <input class="form-control text-center custom-input" placeholder="Select/Input category" name="category" id="category"/>
                                 </div>
                                 <div class="custom-dropdown categoryDropdown" id="categoryDropdown">
                                 </div>
