--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -121,51 +121,63 @@
         },
     });
 });
-</script>
 
-<script>
-    $(document).ready(function() {
-        if ($('.collapse-item.active').length > 0) {
-            $('.collapse-item.active').closest('.collapse').addClass('show');
-        }
+$(document).ready(function() {
+    if ($('.collapse-item.active').length > 0) {
+        $('.collapse-item.active').closest('.collapse').addClass('show');
+    }
 
-        $('.collapse-item').click(function() {
-            $('.collapse-item').removeClass('active');
+    $('.collapse-item').click(function() {
+        $('.collapse-item').removeClass('active');
+        $(this).addClass('active');
+    });
+    
+    var path = window.location.pathname;
+
+    $('.collapse-item').each(function() {
+        var href = $(this).attr('href');
+        if (path === href) {
             $(this).addClass('active');
-        });
-        
-        var path = window.location.pathname;
-
-        $('.collapse-item').each(function() {
-            var href = $(this).attr('href');
-            if (path === href) {
-                $(this).addClass('active');
-                $(this).closest('.collapse').addClass('show');
-            }
-        });
-
-        function adjustCollapse() {
-            if ($(window).width() <= 767) {
-                $('.collapse').removeClass('show');
-                $('.row.d-flex.justify-content-center.align-items-center').removeClass('login-height');
-            } else {
-                $('.collapse-item.active').closest('.collapse').addClass('show');
-            }
+            $(this).closest('.collapse').addClass('show');
         }
-        adjustCollapse();
-
-        $(window).resize(function() {
-            adjustCollapse();
-        });
-
-        $(document).on('click', function(event) {
-            if ($(window).width() <= 767) {
-                if (!$(event.target).closest('.collapse').length) {
-                $('.collapse').removeClass('show');
-                }
-            }
-
-        });
     });
 
+    function adjustCollapse() {
+        if ($(window).width() <= 767) {
+            $('.collapse').removeClass('show');
+            $('.row.d-flex.justify-content-center.align-items-center').removeClass('login-height');
+        } else {
+            $('.collapse-item.active').closest('.collapse').addClass('show');
+        }
+    }
+    adjustCollapse();
+
+    $(window).resize(function() {
+        adjustCollapse();
+    });
+
+    $(document).on('click', function(event) {
+        if ($(window).width() <= 767) {
+            if (!$(event.target).closest('.collapse').length) {
+            $('.collapse').removeClass('show');
+            }
+        }
+
+    });
+});
+
+$('.customdropdown').click(function () {
+    $(this).attr('tabindex', 1).focus();
+    $(this).toggleClass('active');
+    $(this).find('.customdropdown-menu').slideToggle(300);
+});
+$('.customdropdown').focusout(function () {
+    $(this).removeClass('active');
+    $(this).find('.customdropdown-menu').slideUp(300);
+});
+$('.customdropdown .customdropdown-menu li').click(function () {
+    $(this).parents('.customdropdown').find('span').text($(this).text());
+    $(this).parents('.customdropdown').find('input').attr('value', $(this).attr('id'));
+});
 </script>
+
