Fix components table

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -32,6 +32,11 @@
   
   --fw-700: '700';
 }
+.form-control:disabled{
+  background-color: white !important;
+  border: none !important;
+}
+
 /* Font Styling */
 
 .custom-mt{
