--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -1,6 +1,6 @@
 <script>
     $(document).ready(function () {
-        let currentFilter = 'monthly'; 
+        let currentFilter = 'daily'; 
         let myChart;
         LoadYearly();
         renderLineChart;
