--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -176,11 +176,8 @@
                 <a class="collapse-item" href="/materialcount">
                     <span>Material Count</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/productioncomponents">
                     <span>Components</span>
-                </a>
-                <a class="collapse-item" href="#">
-                    <span>Cost</span>
                 </a>
                 <a class="collapse-item" href="#">
                     <span>Logs</span>
