--- a/public/stylesheets/css/customdropdown.css
+++ b/public/stylesheets/css/customdropdown.css
@@ -40,7 +40,7 @@
     box-shadow: 0 0 2px rgb(204, 204, 204);
     transition: all .5s ease;
     position: relative;
-    height: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
     text-align: left;
     border: 1px solid #d1d3e2;
   }
@@ -50,7 +50,7 @@
   .customdropdown .select {
       cursor: pointer;
       display: block;
-      padding: 10px
+      padding: 7px
   }
   .customdropdown .select > i {
       cursor: pointer;
@@ -100,3 +100,13 @@
   .customdropdown .customdropdown-menu li:active {
       background-color: #f2f2f2
   }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
