--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -64,7 +64,7 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <div class="toggle-view">
-        <div class="row">
+        <div class="row mb-2">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header header-bg">
@@ -109,8 +109,8 @@
                                                 </td>
                                                 <td data-label="Material ID" class="custom-mobile-align material-id"></td>
                                                 <td data-label="Quantity" class="custom-mobile-align"><div class="row justify-content-center"><input id="quantity" name="quantity" type="number" class="form-control w-50" placeholder="0.00" value="" maxlength="8"></div>
-                                                <td data-label="Cost" class="custom-mobile-align"><span>₱</span><span id="totalcost">0.00</span></td>
-                                                <td data-label="Unit" class="custom-mobile-align unit"></td>
+                                                <td data-label="Cost" class="custom-mobile-align"><span>₱</span><span class="totalcost" id="totalcost">0.00</span></td>
+                                                <td data-label="Unit" class="custom-mobile-align units unit"></td>
                                                 <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
                                             </tr>
                                         </tbody>
@@ -118,6 +118,12 @@
                                         </tfoot>
                                     </table>
                                 </div>
+                            </div>
+                        </div>
+                        
+                        <div class="row justify-content-end mt-1">
+                            <div class="col-2">
+                                <button type="button" id="submitBtn" class="btn btn-outline-inventory">Update</button>
                             </div>
                         </div>
                     </div> 
@@ -128,7 +134,7 @@
     
 
     <!-- DataTales Example -->
-    <div class="card mb-4 table-size-lg">
+    <div class="card mb-4 table-size-lg mt-2">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
