--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -64,13 +64,13 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <div class="toggle-view">
-        <div class="row mb-2">
+        <div class="row mb-1">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header header-bg">
                         <div class="row">
                             <div class="col-6">
-                                <h6 class="m-0 font-weight-bold mt-2">Components Table</h6>
+                                <h6 class="m-0 font-weight-bold mt-2">Components</h6>
                             </div>
                             <div class="col-6">
                                 <div class="customdropdown">
@@ -134,7 +134,7 @@
     
 
     <!-- DataTales Example -->
-    <div class="card mb-4 table-size-lg mt-2">
+    <div class="card mb-4 table-size mt-2">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -172,12 +172,12 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container-lg">
-                <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
+            <div class="table-responsive scrollable-table-container">
+                <table class="table table-bordered custom-mobile-table" id="productioncomponents-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
                             <th class = "col-1">Component ID</th>
-                            <th class = "col-1">Product ID</th>
+                            <th class = "col-1">Product name</th>
                             <th class = "col-2">Components</th>
                             <th class = "col-2">Created by</th>
                             <th class = "col-1">Created date</th>
