--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -110,7 +110,7 @@
     </div>
             
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card shadow mb-4 table-size">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -141,12 +141,12 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scrollable-table-container">
             <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Count ID</th>
-                        <th class = "col-2">Product ID</th>
+                        <th class = "col-2">Material Name</th>
                         <th class = "col-2">Quantity</th>
                         <th class = "col-1">Unit</th>
                         <th class = "col-3">Created By</th>
