--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -65,7 +65,7 @@
 <div class="container-fluid">
     <div class="toggle-view">
         <div class="row mb-2">
-            <div class="col-lg-12">
+            <div class="col-12">
                 <div class="card">
                     <div class="card-header py-3 header-bg">
                         <h6 class="m-0 font-weight-bold mt-2">Production Materials</h6>
@@ -138,7 +138,7 @@
     
 
     <!-- DataTales Example -->
-    <div class="card mb-4 table-size-lg">
+    <div class="card mb-4 table-size">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -176,12 +176,12 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container-lg">
+            <div class="table-responsive scrollable-table-container">
                 <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
-                            <th class = "col-1">Product ID</th>
-                            <th class = "col-1">Product Name</th>
+                            <th class = "col-1">Material ID</th>
+                            <th class = "col-1">Material Name</th>
                             <th class = "col-2">Description</th>
                             <th class = "col-1">Category</th>
                             <th class = "col-1">Vendor ID</th>
