Added display for Production

--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -107,7 +107,7 @@
                                                         <option value="">Select Material</option>
                                                     </select>
                                                 </td>
-                                                <td data-label="Material ID" class="custom-mobile-align material-id"></td>
+                                                <td data-label="Material ID" class="custom-mobile-align material-id materialid"></td>
                                                 <td data-label="Quantity" class="custom-mobile-align"><div class="row justify-content-center"><input id="quantity" name="quantity" type="number" class="form-control w-50" placeholder="0.00" value="" maxlength="8"></div>
                                                 <td data-label="Cost" class="custom-mobile-align"><span>₱</span><span class="totalcost" id="totalcost">0.00</span></td>
                                                 <td data-label="Unit" class="custom-mobile-align units unit"></td>
