--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card shadow table-size">
+                <div class="card shadow">
                     <div class="card-header py-3 header-bg">
                         <h6 class="m-0 font-weight-bold table-title">Order Details Data:</h6>
                     </div>
