--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -167,7 +167,7 @@
             data-parent="#accordionSidebar">
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Contents:</h6>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/production">
                     <span>Production</span>
                 </a>
                 <a class="collapse-item" href="/productionmaterials">
