finish production backend and frontend functionalities

--- a/public/stylesheets/css/customdropdown.css
+++ b/public/stylesheets/css/customdropdown.css
@@ -110,3 +110,12 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
+
+  
