--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -146,7 +146,7 @@
                                                         ticks: {
                                                             font: {
                                                                 family: 'Open Sans',
-                                                                size: 12 // Set the font size here
+                                                                size: 12 
                                                             }
                                                         }
                                                     },
@@ -154,7 +154,7 @@
                                                         ticks: {
                                                             font: {
                                                                 family: 'Open Sans',
-                                                                size: 12 // Set the font size here
+                                                                size: 12 
                                                             }
                                                         }
                                                     }
