--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -13,22 +13,33 @@
                         <div class="row mb-1">
                             <div class="col-12">
                                 <div class="row justify-content-end">
-                                    <div class="col-md-4 mb-1">
-                                        <select class="form-control text-center loading-border" name="productlists" id="productlists">
-                                            <option value="">-- Select here Product --</option>
-                                        </select> 
+                                    <div class="col-md-3 mb-1">
+                                        <div class="customdropdown">
+                                            <div class="select selectproduct">
+                                                <span id="selectedproduct">Select Product</span>
+                                                <i class="fa fa-chevron-left"></i>
+                                            </div>
+                                            <input type="hidden" name="productid" id="productid">
+                                            <ul class="customdropdown-menu productlist">
+                                            </ul>
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="input-group mb-2">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text" id="basic-addon2">Quantity</span>
                                             </div>
-                                            <input id="quantity" name="quantity" type="number" class="form-control" placeholder="Enter Quantity" aria-label="orderdate" aria-describedby="basic-addon1">
+                                            <input id="quantity" name="quantity" type="number" class="form-control" placeholder="Enter Quantity" aria-label="quantity" aria-describedby="basic-addon1" disabled>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row mr-5 ml-5">
-                                    <div class="table-responsive scrollable-table-container-sm table-size">
+                                <div class="row justify-content-end">
+                                    <div class="col-3">
+                                        <span class="text-right">Max Quantity: <span id="max-quantity"></span></span>
+                                    </div>
+                                </div>
+                                <div class="row mr-4 ml-4 mb-2">
+                                    <div class="table-responsive scrollable-table-container-xsm table-size-sm">
                                         <table class="table table-bordered custom-mobile-table" id="components-datatable" width="100%" cellspacing="10">
                                             <thead class="table-header">
                                                 <tr>
@@ -44,9 +55,6 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <span>Max Quantity can produce based on stock: <span id="max-quantity"></span></span>
                                 </div>
                             </div>
                         </div>
@@ -70,9 +78,19 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-8">
-                                <select class="form-control text-center loading-border" name="supervisor" id="supervisor">
-                                    <option value="">-- Select Supervisor --</option>
-                                </select> 
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text label-width-2" id="basic-addon2">Employee</span>
+                                    </div>
+                                    <select class="form-control text-center" name="employeelist" id="employeelist">
+                                        <option value="">-- Select Supervisor --</option>
+                                    </select>    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-md-8">
+                                <textarea class="form-control" id="notes" placeholder="Add Notes" rows="3"></textarea>
                             </div>
                         </div>
                         <div class="row">
@@ -87,7 +105,7 @@
                             <div class="col-md-4 align mt-1">
                                 <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
                                     <i class="fa fa-plus" aria-hidden="true"></i>
-                                    Add
+                                    ADD
                                 </button>
                             </div>
                         </div>
@@ -136,11 +154,11 @@
                         <th class = "col-1">Product</th>
                         <th class = "col-1">Start Date</th>
                         <th class = "col-1">End Date</th>
-                        <th class = "col-1">Status</th>
                         <th class = "col-1">Quantity</th>
                         <th class = "col-1">Production Line</th>
                         <th class = "col-2">Super Visor</th>
                         <th class = "col-2">Notes</th>      
+                        <th class = "col-1">Status</th>    
                         <th class = "col-1">Action</th>          
                     </tr>
                 </thead>          
